--- a/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
+++ b/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
@@ -53,6 +53,8 @@ jobs:
       commit_hash: ${{ steps.build_info.outputs.commit_hash }}
       pr_number: ${{ steps.build_info.outputs.pr_number }}
       build_number: ${{ steps.build_info.outputs.build_number }}
+      progress_comment_id: ${{ steps.progress_comment.outputs.comment_id }}
+      progress_start_time: ${{ steps.progress_comment.outputs.start_time }}
 
     steps:
       - name: Checkout repository
@@ -150,6 +152,47 @@ jobs:
           fi
           echo "  커밋 해시: $COMMIT_SHORT"
           echo "  빌드 날짜: $BUILD_DATE"
+
+      # 진행상황 댓글 생성 (repository_dispatch로 트리거된 경우에만)
+      - name: 진행상황 댓글 생성
+        id: progress_comment
+        if: github.event_name == 'repository_dispatch' && github.event.client_payload.pr_number != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const prNumber = parseInt('${{ github.event.client_payload.pr_number }}');
+            const buildNumber = '${{ steps.build_info.outputs.build_number }}';
+            const branchName = '${{ steps.issue_info.outputs.branch_name }}';
+            const runId = '${{ github.run_id }}';
+            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
+            const startTime = Date.now();
+
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ⏳ 진행 중... | - |',
+              '| 🔨 APK 빌드 | ⏸️ 대기 | - |',
+              '| 📤 업로드 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🤖 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
+
+            const { data: comment } = await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber,
+              body: body
+            });
+
+            core.setOutput('comment_id', comment.id);
+            core.setOutput('start_time', startTime);
+            console.log(`✅ 진행상황 댓글 생성 완료 (ID: ${comment.id})`);
 
   build-android-test:
     name: Android 테스트 APK 빌드
@@ -284,6 +327,47 @@ jobs:
           echo "Fastlane installed"
           fastlane --version
 
+      # 진행상황 업데이트 - 준비 완료
+      - name: 진행상황 - 준비 완료
+        id: progress_step1
+        if: github.event_name == 'repository_dispatch' && needs.prepare-test-build.outputs.progress_comment_id != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const commentId = parseInt('${{ needs.prepare-test-build.outputs.progress_comment_id }}');
+            const startTime = parseInt('${{ needs.prepare-test-build.outputs.progress_start_time }}');
+            const now = Date.now();
+            const elapsed = Math.floor((now - startTime) / 1000);
+            const prepDuration = elapsed >= 60 ? `${Math.floor(elapsed / 60)}분 ${elapsed % 60}초` : `${elapsed}초`;
+            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${{ github.run_id }}`;
+
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${prepDuration} |`,
+              '| 🔨 APK 빌드 | ⏳ 진행 중... | - |',
+              '| 📤 업로드 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🤖 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
+
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: commentId,
+              body: body
+            });
+
+            core.setOutput('prep_duration', prepDuration);
+            core.setOutput('build_start', now);
+            console.log(`✅ 진행상황 업데이트: 준비 완료 (${prepDuration})`);
+
       # APK 파일명 생성
       - name: Generate APK filename
         id: apk_filename
@@ -301,6 +385,49 @@ jobs:
           fastlane build --verbose
           ls -la ../build/app/outputs/flutter-apk/ || true
           echo "APK built with Fastlane"
+
+      # 진행상황 업데이트 - APK 빌드 완료
+      - name: 진행상황 - APK 빌드 완료
+        id: progress_step2
+        if: github.event_name == 'repository_dispatch' && needs.prepare-test-build.outputs.progress_comment_id != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const commentId = parseInt('${{ needs.prepare-test-build.outputs.progress_comment_id }}');
+            const prepDuration = '${{ steps.progress_step1.outputs.prep_duration }}' || '-';
+            const buildStart = parseInt('${{ steps.progress_step1.outputs.build_start }}') || Date.now();
+            const now = Date.now();
+            const buildElapsed = Math.floor((now - buildStart) / 1000);
+            const buildDuration = buildElapsed >= 60 ? `${Math.floor(buildElapsed / 60)}분 ${buildElapsed % 60}초` : `${buildElapsed}초`;
+            const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${{ github.run_id }}`;
+
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${prepDuration} |`,
+              `| 🔨 APK 빌드 | ✅ 완료 | ${buildDuration} |`,
+              '| 📤 업로드 | ⏳ 진행 중... | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🤖 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
+
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: commentId,
+              body: body
+            });
+
+            core.setOutput('prep_duration', prepDuration);
+            core.setOutput('build_duration', buildDuration);
+            core.setOutput('upload_start', now);
+            console.log(`✅ 진행상황 업데이트: APK 빌드 완료 (${buildDuration})`);
 
       # APK 파일 이름 변경 및 준비
       - name: Rename and Prepare APK
@@ -418,15 +545,14 @@ jobs:
           echo "❌ Android 테스트 APK 빌드 실패!"
           echo "로그를 확인해주세요."
 
-      # PR/ISSUE에 빌드 완료 댓글 작성 (repository_dispatch로 트리거된 경우)
-      # source_type: PR → PR에만 댓글
-      # source_type: ISSUE 또는 기타 → 트리거된 곳(pr_number)에만 댓글
-      - name: 빌드 성공 댓글 작성
-        if: success() && github.event_name == 'repository_dispatch' && github.event.client_payload.pr_number != ''
+      # 진행상황 최종 업데이트 - 성공
+      - name: 진행상황 - 빌드 성공 (최종)
+        if: success() && github.event_name == 'repository_dispatch' && needs.prepare-test-build.outputs.progress_comment_id != ''
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const commentId = parseInt('${{ needs.prepare-test-build.outputs.progress_comment_id }}');
             const sourceType = '${{ github.event.client_payload.source_type }}' || 'PR';
             const prNumber = parseInt('${{ github.event.client_payload.pr_number }}');
             const issueNumber = '${{ needs.prepare-test-build.outputs.issue_number }}';
@@ -437,61 +563,82 @@ jobs:
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
             const artifactUrl = `${runUrl}#artifacts`;
 
-            const body = `🤖 ✅ **Android 테스트 APK 빌드 완료**
+            // 소요 시간 계산
+            const prepDuration = '${{ steps.progress_step1.outputs.prep_duration }}' || '-';
+            const buildDuration = '${{ steps.progress_step2.outputs.build_duration }}' || '-';
+            const uploadStart = parseInt('${{ steps.progress_step2.outputs.upload_start }}') || Date.now();
+            const now = Date.now();
+            const uploadElapsed = Math.floor((now - uploadStart) / 1000);
+            const uploadDuration = uploadElapsed >= 60 ? `${Math.floor(uploadElapsed / 60)}분 ${uploadElapsed % 60}초` : `${uploadElapsed}초`;
 
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-            - 커밋: \`${commitHash}\`
+            // 총 소요 시간
+            const startTime = parseInt('${{ needs.prepare-test-build.outputs.progress_start_time }}');
+            const totalElapsed = Math.floor((now - startTime) / 1000);
+            const totalDuration = totalElapsed >= 60 ? `${Math.floor(totalElapsed / 60)}분 ${totalElapsed % 60}초` : `${totalElapsed}초`;
 
-            📦 **[아티팩트 다운로드](${artifactUrl})**
+            const body = [
+              '## 🤖 ✅ Android APK 빌드 완료!',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${prepDuration} |`,
+              `| 🔨 APK 빌드 | ✅ 완료 | ${buildDuration} |`,
+              `| 📤 업로드 | ✅ 완료 | ${uploadDuration} |`,
+              '',
+              '### 📦 빌드 결과',
+              '| 항목 | 값 |',
+              '|------|-----|',
+              `| **앱 버전** | \`0.0.0(${buildNumber})\` |`,
+              `| **브랜치** | \`${branchName}\` |`,
+              `| **커밋** | \`${commitHash}\` |`,
+              `| **총 소요 시간** | ${totalDuration} |`,
+              '',
+              `📦 **[아티팩트 다운로드](${artifactUrl})**`,
+              '',
+              `🔗 [워크플로우 실행 로그](${runUrl})`,
+              '',
+              '---',
+              '*🤖 이 댓글은 앱 빌드 시스템에 의해 자동 생성되었습니다.*'
+            ].join('\n');
 
-            🔗 [워크플로우 실행 로그](${runUrl})`;
+            // 진행상황 댓글 업데이트
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: commentId,
+              body: body
+            });
+            console.log(`✅ 진행상황 댓글 최종 업데이트 완료 (성공)`);
 
-            // PR에서 트리거된 경우: PR에 댓글
-            if (sourceType === 'PR') {
+            // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 결과 댓글 작성
+            if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
+              const issueBody = [
+                '## 🤖 ✅ Android APK 빌드 완료!',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                `- 커밋: \`${commitHash}\``,
+                `- 총 소요 시간: ${totalDuration}`,
+                '',
+                `📦 **[아티팩트 다운로드](${artifactUrl})**`
+              ].join('\n');
+
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: prNumber,
-                body: body
+                issue_number: parseInt(issueNumber),
+                body: issueBody
               });
-              console.log(`✅ PR #${prNumber}에 빌드 성공 댓글 작성 완료`);
-
-              // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
-              if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-                const issueBody = `🤖 ✅ **Android 테스트 APK 빌드 완료**
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 커밋: \`${commitHash}\`
-
-            📦 **[아티팩트 다운로드](${artifactUrl})**`;
-
-                await github.rest.issues.createComment({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: parseInt(issueNumber),
-                  body: issueBody
-                });
-                console.log(`✅ 이슈 #${issueNumber}에도 빌드 성공 댓글 작성 완료`);
-              }
-            }
-            // ISSUE에서 트리거된 경우 또는 기타: 트리거된 곳에만 댓글
-            else {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: prNumber,
-                body: body
-              });
-              console.log(`✅ ${sourceType} #${prNumber}에 빌드 성공 댓글 작성 완료`);
+              console.log(`✅ 이슈 #${issueNumber}에 빌드 성공 결과 댓글 작성 완료`);
             }
 
-      - name: 빌드 실패 댓글 작성
-        if: failure() && github.event_name == 'repository_dispatch' && github.event.client_payload.pr_number != ''
+      # 진행상황 최종 업데이트 - 실패
+      - name: 진행상황 - 빌드 실패 (최종)
+        if: failure() && github.event_name == 'repository_dispatch' && needs.prepare-test-build.outputs.progress_comment_id != ''
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const commentId = parseInt('${{ needs.prepare-test-build.outputs.progress_comment_id }}');
             const sourceType = '${{ github.event.client_payload.source_type }}' || 'PR';
             const prNumber = parseInt('${{ github.event.client_payload.pr_number }}');
             const issueNumber = '${{ needs.prepare-test-build.outputs.issue_number }}';
@@ -500,43 +647,69 @@ jobs:
             const runId = '${{ github.run_id }}';
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
 
-            const body = `🤖 ❌ **Android 테스트 APK 빌드 실패**
+            // 소요 시간 (실패 시점까지)
+            const prepDuration = '${{ steps.progress_step1.outputs.prep_duration }}' || '-';
+            const buildDuration = '${{ steps.progress_step2.outputs.build_duration }}' || '-';
 
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
+            // 실패 단계 판단
+            let prepStatus = '✅ 완료';
+            let buildStatus = '✅ 완료';
+            let uploadStatus = '❌ 실패';
 
-            ❌ 빌드 중 오류가 발생했습니다.
-
-            🔗 [워크플로우 실행 로그 확인](${runUrl})`;
-
-            // PR에서 트리거된 경우: PR에 댓글
-            if (sourceType === 'PR') {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: prNumber,
-                body: body
-              });
-              console.log(`✅ PR #${prNumber}에 빌드 실패 댓글 작성 완료`);
-
-              // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
-              if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-                await github.rest.issues.createComment({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: parseInt(issueNumber),
-                  body: body
-                });
-                console.log(`✅ 이슈 #${issueNumber}에도 빌드 실패 댓글 작성 완료`);
-              }
+            if (!prepDuration || prepDuration === '-' || prepDuration === '') {
+              prepStatus = '❌ 실패';
+              buildStatus = '⏸️ 대기';
+              uploadStatus = '⏸️ 대기';
+            } else if (!buildDuration || buildDuration === '-' || buildDuration === '') {
+              buildStatus = '❌ 실패';
+              uploadStatus = '⏸️ 대기';
             }
-            // ISSUE에서 트리거된 경우 또는 기타: 트리거된 곳에만 댓글
-            else {
+
+            const body = [
+              '## 🤖 ❌ Android APK 빌드 실패',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ${prepStatus} | ${prepDuration || '-'} |`,
+              `| 🔨 APK 빌드 | ${buildStatus} | ${buildDuration || '-'} |`,
+              `| 📤 업로드 | ${uploadStatus} | - |`,
+              '',
+              '### 🔍 가능한 원인',
+              '- Gradle 빌드 실패',
+              '- Flutter 컴파일 오류',
+              '- 의존성 충돌',
+              '',
+              `📋 **[빌드 로그 확인](${runUrl})**`,
+              '',
+              '---',
+              '*🤖 이 댓글은 앱 빌드 시스템에 의해 자동 생성되었습니다.*'
+            ].join('\n');
+
+            // 진행상황 댓글 업데이트
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: commentId,
+              body: body
+            });
+            console.log(`✅ 진행상황 댓글 최종 업데이트 완료 (실패)`);
+
+            // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 결과 댓글 작성
+            if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
+              const issueBody = [
+                '## 🤖 ❌ Android APK 빌드 실패',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                `- 브랜치: \`${branchName}\``,
+                '',
+                `📋 **[빌드 로그 확인](${runUrl})**`
+              ].join('\n');
+
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: prNumber,
-                body: body
+                issue_number: parseInt(issueNumber),
+                body: issueBody
               });
-              console.log(`✅ ${sourceType} #${prNumber}에 빌드 실패 댓글 작성 완료`);
+              console.log(`✅ 이슈 #${issueNumber}에 빌드 실패 결과 댓글 작성 완료`);
             }
