--- a/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
@@ -61,6 +61,8 @@ jobs:
       commit_hash: ${{ steps.release_notes.outputs.commit_hash }}
       progress_comment_id: ${{ steps.progress_comment.outputs.comment_id }}
       progress_start_time: ${{ steps.progress_comment.outputs.start_time }}
+      step1_elapsed: ${{ steps.progress_step1.outputs.step1_elapsed }}
+      step1_end_time: ${{ steps.progress_step1.outputs.step1_end_time }}
 
     steps:
       - name: Checkout repository
@@ -241,18 +243,20 @@ jobs:
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
             const startTime = Date.now();
 
-            const body = `🍎 **iOS TestFlight 빌드 진행 중...**
-
-            | 단계 | 상태 | 소요시간 |
-            |------|------|----------|
-            | 1. 준비 | ⏳ 진행 중... | - |
-            | 2. IPA 빌드 | ⏸️ 대기 중 | - |
-            | 3. TestFlight 배포 | ⏸️ 대기 중 | - |
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-
-            🔗 [워크플로우 실행 로그](${runUrl})`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ⏳ 진행 중... | - |',
+              '| 🔨 IPA 빌드 | ⏸️ 대기 | - |',
+              '| 📤 TestFlight 배포 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🍎 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
 
             const { data: comment } = await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -267,6 +271,7 @@ jobs:
 
       # 진행상황 - 준비 완료
       - name: 진행상황 - 준비 완료
+        id: progress_step1
         if: github.event_name == 'repository_dispatch' && github.event.client_payload.pr_number != '' && steps.progress_comment.outputs.comment_id != ''
         uses: actions/github-script@v7
         with:
@@ -284,18 +289,20 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `🍎 **iOS TestFlight 빌드 진행 중...**
-
-            | 단계 | 상태 | 소요시간 |
-            |------|------|----------|
-            | 1. 준비 | ✅ 완료 | ${elapsedStr} |
-            | 2. IPA 빌드 | ⏳ 진행 중... | - |
-            | 3. TestFlight 배포 | ⏸️ 대기 중 | - |
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-
-            🔗 [워크플로우 실행 로그](${runUrl})`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${elapsedStr} |`,
+              '| 🔨 IPA 빌드 | ⏳ 진행 중... | - |',
+              '| 📤 TestFlight 배포 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🍎 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -305,11 +312,16 @@ jobs:
             });
             console.log(`✅ 진행상황 업데이트: 준비 완료 (${elapsedStr})`);
             core.setOutput('step1_elapsed', elapsedStr);
+            core.setOutput('step1_end_time', Date.now());
 
   build-ios-test:
     name: iOS 테스트 빌드
     runs-on: macos-15
     needs: prepare-test-build
+
+    outputs:
+      step2_elapsed: ${{ steps.progress_step2.outputs.step2_elapsed }}
+      step2_end_time: ${{ steps.progress_step2.outputs.step2_end_time }}
 
     steps:
       - name: Checkout repository
@@ -478,35 +490,41 @@ jobs:
 
       # 진행상황 - IPA 빌드 완료
       - name: 진행상황 - IPA 빌드 완료
+        id: progress_step2
         if: github.event_name == 'repository_dispatch' && github.event.client_payload.pr_number != '' && needs.prepare-test-build.outputs.progress_comment_id != ''
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const commentId = parseInt('${{ needs.prepare-test-build.outputs.progress_comment_id }}');
-            const startTime = parseInt('${{ needs.prepare-test-build.outputs.progress_start_time }}');
+            const step1EndTime = parseInt('${{ needs.prepare-test-build.outputs.step1_end_time }}') || Date.now();
+            const step1Elapsed = '${{ needs.prepare-test-build.outputs.step1_elapsed }}' || '-';
             const buildNumber = '${{ needs.prepare-test-build.outputs.build_number }}';
             const branchName = '${{ needs.prepare-test-build.outputs.branch_name }}';
             const runId = '${{ github.run_id }}';
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
 
-            const elapsed = Math.round((Date.now() - startTime) / 1000);
+            // IPA 빌드 소요 시간 계산 (step1 완료 후부터)
+            const now = Date.now();
+            const elapsed = Math.round((now - step1EndTime) / 1000);
             const minutes = Math.floor(elapsed / 60);
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `🍎 **iOS TestFlight 빌드 진행 중...**
-
-            | 단계 | 상태 | 소요시간 |
-            |------|------|----------|
-            | 1. 준비 | ✅ 완료 | - |
-            | 2. IPA 빌드 | ✅ 완료 | ${elapsedStr} |
-            | 3. TestFlight 배포 | ⏳ 진행 중... | - |
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-
-            🔗 [워크플로우 실행 로그](${runUrl})`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed} |`,
+              `| 🔨 IPA 빌드 | ✅ 완료 | ${elapsedStr} |`,
+              '| 📤 TestFlight 배포 | ⏳ 진행 중... | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`,
+              '',
+              '---',
+              '*🍎 이 댓글은 자동으로 업데이트됩니다.*'
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -515,6 +533,8 @@ jobs:
               body: body
             });
             console.log(`✅ 진행상황 업데이트: IPA 빌드 완료 (${elapsedStr})`);
+            core.setOutput('step2_elapsed', elapsedStr);
+            core.setOutput('step2_end_time', now);
 
   deploy-testflight-test:
     name: TestFlight 테스트 배포
@@ -661,26 +681,48 @@ jobs:
             const runId = '${{ github.run_id }}';
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
 
-            const elapsed = Math.round((Date.now() - startTime) / 1000);
-            const minutes = Math.floor(elapsed / 60);
-            const seconds = elapsed % 60;
-            const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
+            // 이전 단계 소요 시간 가져오기
+            const step1Elapsed = '${{ needs.prepare-test-build.outputs.step1_elapsed }}' || '-';
+            const step2Elapsed = '${{ needs.build-ios-test.outputs.step2_elapsed }}' || '-';
+            const step2EndTime = parseInt('${{ needs.build-ios-test.outputs.step2_end_time }}') || Date.now();
 
-            const body = `🍎 ✅ **iOS TestFlight 빌드 완료**
+            // step3 소요 시간 계산 (step2 완료 후부터)
+            const now = Date.now();
+            const step3Elapsed = Math.round((now - step2EndTime) / 1000);
+            const step3Minutes = Math.floor(step3Elapsed / 60);
+            const step3Seconds = step3Elapsed % 60;
+            const step3Str = step3Minutes > 0 ? `${step3Minutes}분 ${step3Seconds}초` : `${step3Seconds}초`;
 
-            | 단계 | 상태 | 소요시간 |
-            |------|------|----------|
-            | 1. 준비 | ✅ 완료 | - |
-            | 2. IPA 빌드 | ✅ 완료 | - |
-            | 3. TestFlight 배포 | ✅ 완료 | ${elapsedStr} |
+            // 총 소요 시간 계산
+            const totalElapsed = Math.round((now - startTime) / 1000);
+            const totalMinutes = Math.floor(totalElapsed / 60);
+            const totalSeconds = totalElapsed % 60;
+            const totalDuration = totalMinutes > 0 ? `${totalMinutes}분 ${totalSeconds}초` : `${totalSeconds}초`;
 
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-            - 커밋: \`${commitHash}\`
-
-            📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**
-
-            🔗 [워크플로우 실행 로그](${runUrl})`;
+            const body = [
+              '## 🍎 ✅ iOS TestFlight 빌드 완료!',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed} |`,
+              `| 🔨 IPA 빌드 | ✅ 완료 | ${step2Elapsed} |`,
+              `| 📤 TestFlight 배포 | ✅ 완료 | ${step3Str} |`,
+              '',
+              '### 📦 빌드 결과',
+              '| 항목 | 값 |',
+              '|------|-----|',
+              `| **앱 버전** | \`0.0.0(${buildNumber})\` |`,
+              `| **브랜치** | \`${branchName}\` |`,
+              `| **커밋** | \`${commitHash}\` |`,
+              `| **총 소요 시간** | ${totalDuration} |`,
+              '',
+              '📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**',
+              '',
+              `🔗 [워크플로우 실행 로그](${runUrl})`,
+              '',
+              '---',
+              '*🍎 이 댓글은 앱 빌드 시스템에 의해 자동 생성되었습니다.*'
+            ].join('\n');
 
             // 기존 진행상황 댓글 업데이트
             await github.rest.issues.updateComment({
@@ -689,17 +731,19 @@ jobs:
               comment_id: commentId,
               body: body
             });
-            console.log(`✅ 진행상황 댓글 최종 업데이트: 빌드 성공 (${elapsedStr})`);
+            console.log(`✅ 진행상황 댓글 최종 업데이트: 빌드 성공 (총 ${totalDuration})`);
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글 (새 댓글 생성)
             if (sourceType === 'PR' && issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-              const issueBody = `🍎 ✅ **iOS TestFlight 빌드 완료**
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 커밋: \`${commitHash}\`
-            - 총 소요시간: ${elapsedStr}
-
-            📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**`;
+              const issueBody = [
+                '## 🍎 ✅ iOS TestFlight 빌드 완료!',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                `- 커밋: \`${commitHash}\``,
+                `- 총 소요시간: ${totalDuration}`,
+                '',
+                '📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**'
+              ].join('\n');
 
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
@@ -727,25 +771,37 @@ jobs:
             const runId = '${{ github.run_id }}';
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
 
-            const elapsed = Math.round((Date.now() - startTime) / 1000);
-            const minutes = Math.floor(elapsed / 60);
-            const seconds = elapsed % 60;
-            const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
+            // 이전 단계 소요 시간 가져오기
+            const step1Elapsed = '${{ needs.prepare-test-build.outputs.step1_elapsed }}' || '-';
+            const step2Elapsed = '${{ needs.build-ios-test.outputs.step2_elapsed }}' || '-';
+            const step2EndTime = parseInt('${{ needs.build-ios-test.outputs.step2_end_time }}') || Date.now();
 
-            const body = `🍎 ❌ **iOS TestFlight 빌드 실패**
+            // step3 소요 시간 계산 (step2 완료 후부터)
+            const now = Date.now();
+            const step3Elapsed = Math.round((now - step2EndTime) / 1000);
+            const step3Minutes = Math.floor(step3Elapsed / 60);
+            const step3Seconds = step3Elapsed % 60;
+            const step3Str = step3Minutes > 0 ? `${step3Minutes}분 ${step3Seconds}초` : `${step3Seconds}초`;
 
-            | 단계 | 상태 | 소요시간 |
-            |------|------|----------|
-            | 1. 준비 | ✅ 완료 | - |
-            | 2. IPA 빌드 | ✅ 완료 | - |
-            | 3. TestFlight 배포 | ❌ 실패 | ${elapsedStr} |
-
-            - 앱 버전: \`0.0.0(${buildNumber})\`
-            - 브랜치: \`${branchName}\`
-
-            ❌ 빌드 중 오류가 발생했습니다.
-
-            🔗 [워크플로우 실행 로그 확인](${runUrl})`;
+            const body = [
+              '## 🍎 ❌ iOS TestFlight 빌드 실패',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed} |`,
+              `| 🔨 IPA 빌드 | ✅ 완료 | ${step2Elapsed} |`,
+              `| 📤 TestFlight 배포 | ❌ 실패 | ${step3Str} |`,
+              '',
+              '### 🔍 가능한 원인',
+              '- TestFlight 업로드 실패',
+              '- 인증서/프로비저닝 프로필 문제',
+              '- App Store Connect API 오류',
+              '',
+              `📋 **[빌드 로그 확인](${runUrl})**`,
+              '',
+              '---',
+              '*🍎 이 댓글은 앱 빌드 시스템에 의해 자동 생성되었습니다.*'
+            ].join('\n');
 
             // 기존 진행상황 댓글 업데이트
             await github.rest.issues.updateComment({
@@ -754,7 +810,7 @@ jobs:
               comment_id: commentId,
               body: body
             });
-            console.log(`✅ 진행상황 댓글 최종 업데이트: 빌드 실패 (${elapsedStr})`);
+            console.log(`✅ 진행상황 댓글 최종 업데이트: 빌드 실패 (${step3Str})`);
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글 (새 댓글 생성)
             if (sourceType === 'PR' && issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
