이슈 및 PR 내 테스트 빌드 트리거 및 apk, testflight 자동 테스트 업로드 로직 추가 : fix : YAML block scalar (script: |) 내부의 JavaScript template literal에서 markdown 테이블의 | 문자가 줄 시작에 위치하면 YAML 파서가 block scalar가 끝났다고 인식하는 문제 해결 https://github.com/Cassiiopeia/SUH-DEVOPS-TEMPLATE/issues/132

--- a/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
+++ b/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
@@ -168,15 +168,17 @@ jobs:
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
             const startTime = Date.now();
 
-            const body = `## 🤖 Android APK 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ⏳ 진행 중... | - |
-| 🔨 APK 빌드 | ⏸️ 대기 | - |
-| 📤 업로드 | ⏸️ 대기 | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ⏳ 진행 중... | - |',
+              '| 🔨 APK 빌드 | ⏸️ 대기 | - |',
+              '| 📤 업로드 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             const { data: comment } = await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -339,15 +341,17 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🤖 Android APK 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | ${elapsedStr} |
-| 🔨 APK 빌드 | ⏳ 진행 중... | - |
-| 📤 업로드 | ⏸️ 대기 | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${elapsedStr} |`,
+              '| 🔨 APK 빌드 | ⏳ 진행 중... | - |',
+              '| 📤 업로드 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -414,15 +418,17 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🤖 Android APK 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | - |
-| 🔨 APK 빌드 | ✅ 완료 | ${elapsedStr} |
-| 📤 업로드 | ⏳ 진행 중... | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🤖 Android APK 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ✅ 완료 | - |',
+              `| 🔨 APK 빌드 | ✅ 완료 | ${elapsedStr} |`,
+              '| 📤 업로드 | ⏳ 진행 중... | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -531,24 +537,26 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🤖 ✅ Android APK 빌드 완료!
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | - |
-| 🔨 APK 빌드 | ✅ 완료 | - |
-| 📤 업로드 | ✅ 완료 | ${elapsedStr} |
-
-### 📦 빌드 결과
-| 항목 | 값 |
-|------|-----|
-| **앱 버전** | \`0.0.0(${buildNumber})\` |
-| **브랜치** | \`${branchName}\` |
-| **커밋** | \`${commitHash}\` |
-| **총 소요 시간** | ${elapsedStr} |
-
-📦 **[아티팩트 다운로드](${artifactUrl})**
-🔗 **[워크플로우 실행 로그](${runUrl})**`;
+            const body = [
+              '## 🤖 ✅ Android APK 빌드 완료!',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ✅ 완료 | - |',
+              '| 🔨 APK 빌드 | ✅ 완료 | - |',
+              `| 📤 업로드 | ✅ 완료 | ${elapsedStr} |`,
+              '',
+              '### 📦 빌드 결과',
+              '| 항목 | 값 |',
+              '|------|-----|',
+              `| **앱 버전** | \`0.0.0(${buildNumber})\` |`,
+              `| **브랜치** | \`${branchName}\` |`,
+              `| **커밋** | \`${commitHash}\` |`,
+              `| **총 소요 시간** | ${elapsedStr} |`,
+              '',
+              `📦 **[아티팩트 다운로드](${artifactUrl})**`,
+              `🔗 **[워크플로우 실행 로그](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -561,12 +569,14 @@ jobs:
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
             if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-              const issueBody = `🤖 ✅ **Android APK 빌드 완료**
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-- 커밋: \`${commitHash}\`
-
-📦 **[아티팩트 다운로드](${artifactUrl})**`;
+              const issueBody = [
+                '🤖 ✅ **Android APK 빌드 완료**',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                `- 커밋: \`${commitHash}\``,
+                '',
+                `📦 **[아티팩트 다운로드](${artifactUrl})**`
+              ].join('\n');
 
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
@@ -598,20 +608,22 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🤖 ❌ Android APK 빌드 실패
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | - |
-| 🔨 APK 빌드 | ❌ 실패 | ${elapsedStr} |
-| 📤 업로드 | ⏸️ 건너뜀 | - |
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-- 브랜치: \`${branchName}\`
-
-❌ 빌드 중 오류가 발생했습니다.
-
-🔗 **[워크플로우 실행 로그 확인](${runUrl})**`;
+            const body = [
+              '## 🤖 ❌ Android APK 빌드 실패',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ✅ 완료 | - |',
+              `| 🔨 APK 빌드 | ❌ 실패 | ${elapsedStr} |`,
+              '| 📤 업로드 | ⏸️ 건너뜀 | - |',
+              '',
+              `- 앱 버전: \`0.0.0(${buildNumber})\``,
+              `- 브랜치: \`${branchName}\``,
+              '',
+              '❌ 빌드 중 오류가 발생했습니다.',
+              '',
+              `🔗 **[워크플로우 실행 로그 확인](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -624,13 +636,15 @@ jobs:
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
             if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-              const issueBody = `🤖 ❌ **Android APK 빌드 실패**
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-
-❌ 빌드 중 오류가 발생했습니다.
-
-🔗 **[워크플로우 실행 로그 확인](${runUrl})**`;
+              const issueBody = [
+                '🤖 ❌ **Android APK 빌드 실패**',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                '',
+                '❌ 빌드 중 오류가 발생했습니다.',
+                '',
+                `🔗 **[워크플로우 실행 로그 확인](${runUrl})**`
+              ].join('\n');
 
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
