--- a/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
@@ -242,15 +242,17 @@ jobs:
             const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
             const startTime = Date.now();
 
-            const body = `## 🍎 iOS TestFlight 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ⏳ 진행 중... | - |
-| 🔨 IPA 빌드 | ⏸️ 대기 | - |
-| 📤 TestFlight 배포 | ⏸️ 대기 | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              '| 🔧 준비 | ⏳ 진행 중... | - |',
+              '| 🔨 IPA 빌드 | ⏸️ 대기 | - |',
+              '| 📤 TestFlight 배포 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             const { data: comment } = await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -281,15 +283,17 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🍎 iOS TestFlight 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | ${elapsedStr} |
-| 🔨 IPA 빌드 | ⏳ 진행 중... | - |
-| 📤 TestFlight 배포 | ⏸️ 대기 | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${elapsedStr} |`,
+              '| 🔨 IPA 빌드 | ⏳ 진행 중... | - |',
+              '| 📤 TestFlight 배포 | ⏸️ 대기 | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -493,15 +497,17 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🍎 iOS TestFlight 빌드 중...
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | ${step1Elapsed} |
-| 🔨 IPA 빌드 | ✅ 완료 | ${elapsedStr} |
-| 📤 TestFlight 배포 | ⏳ 진행 중... | - |
-
-📋 **[실시간 로그 보기](${runUrl})**`;
+            const body = [
+              '## 🍎 iOS TestFlight 빌드 중...',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed} |`,
+              `| 🔨 IPA 빌드 | ✅ 완료 | ${elapsedStr} |`,
+              '| 📤 TestFlight 배포 | ⏳ 진행 중... | - |',
+              '',
+              `📋 **[실시간 로그 보기](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -642,24 +648,26 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🍎 ✅ iOS TestFlight 빌드 완료!
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | ${step1Elapsed || '-'} |
-| 🔨 IPA 빌드 | ✅ 완료 | ${step2Elapsed || '-'} |
-| 📤 TestFlight 배포 | ✅ 완료 | ${elapsedStr} |
-
-### 📦 빌드 결과
-| 항목 | 값 |
-|------|-----|
-| **앱 버전** | \`0.0.0(${buildNumber})\` |
-| **브랜치** | \`${branchName}\` |
-| **커밋** | \`${commitHash}\` |
-| **총 소요 시간** | ${elapsedStr} |
-
-📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**
-🔗 **[워크플로우 실행 로그](${runUrl})**`;
+            const body = [
+              '## 🍎 ✅ iOS TestFlight 빌드 완료!',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed || '-'} |`,
+              `| 🔨 IPA 빌드 | ✅ 완료 | ${step2Elapsed || '-'} |`,
+              `| 📤 TestFlight 배포 | ✅ 완료 | ${elapsedStr} |`,
+              '',
+              '### 📦 빌드 결과',
+              '| 항목 | 값 |',
+              '|------|-----|',
+              `| **앱 버전** | \`0.0.0(${buildNumber})\` |`,
+              `| **브랜치** | \`${branchName}\` |`,
+              `| **커밋** | \`${commitHash}\` |`,
+              `| **총 소요 시간** | ${elapsedStr} |`,
+              '',
+              '📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**',
+              `🔗 **[워크플로우 실행 로그](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -672,12 +680,14 @@ jobs:
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
             if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-              const issueBody = `🍎 ✅ **iOS TestFlight 빌드 완료**
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-- 커밋: \`${commitHash}\`
-
-📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**`;
+              const issueBody = [
+                '🍎 ✅ **iOS TestFlight 빌드 완료**',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                `- 커밋: \`${commitHash}\``,
+                '',
+                '📱 **TestFlight에서 테스트 앱을 다운로드할 수 있습니다.**'
+              ].join('\n');
 
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
@@ -711,20 +721,22 @@ jobs:
             const seconds = elapsed % 60;
             const elapsedStr = minutes > 0 ? `${minutes}분 ${seconds}초` : `${seconds}초`;
 
-            const body = `## 🍎 ❌ iOS TestFlight 빌드 실패
-
-| 단계 | 상태 | 소요 시간 |
-|------|------|----------|
-| 🔧 준비 | ✅ 완료 | ${step1Elapsed || '-'} |
-| 🔨 IPA 빌드 | ${step2Elapsed ? '✅ 완료' : '❌ 실패'} | ${step2Elapsed || elapsedStr} |
-| 📤 TestFlight 배포 | ${step2Elapsed ? '❌ 실패' : '⏸️ 건너뜀'} | ${step2Elapsed ? elapsedStr : '-'} |
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-- 브랜치: \`${branchName}\`
-
-❌ 빌드 중 오류가 발생했습니다.
-
-🔗 **[워크플로우 실행 로그 확인](${runUrl})**`;
+            const body = [
+              '## 🍎 ❌ iOS TestFlight 빌드 실패',
+              '',
+              '| 단계 | 상태 | 소요 시간 |',
+              '|------|------|----------|',
+              `| 🔧 준비 | ✅ 완료 | ${step1Elapsed || '-'} |`,
+              `| 🔨 IPA 빌드 | ${step2Elapsed ? '✅ 완료' : '❌ 실패'} | ${step2Elapsed || elapsedStr} |`,
+              `| 📤 TestFlight 배포 | ${step2Elapsed ? '❌ 실패' : '⏸️ 건너뜀'} | ${step2Elapsed ? elapsedStr : '-'} |`,
+              '',
+              `- 앱 버전: \`0.0.0(${buildNumber})\``,
+              `- 브랜치: \`${branchName}\``,
+              '',
+              '❌ 빌드 중 오류가 발생했습니다.',
+              '',
+              `🔗 **[워크플로우 실행 로그 확인](${runUrl})**`
+            ].join('\n');
 
             await github.rest.issues.updateComment({
               owner: context.repo.owner,
@@ -737,13 +749,15 @@ jobs:
 
             // PR과 연결된 이슈가 있고, PR 번호와 다른 경우에만 이슈에도 댓글
             if (issueNumber && issueNumber !== '' && parseInt(issueNumber) !== prNumber) {
-              const issueBody = `🍎 ❌ **iOS TestFlight 빌드 실패**
-
-- 앱 버전: \`0.0.0(${buildNumber})\`
-
-❌ 빌드 중 오류가 발생했습니다.
-
-🔗 **[워크플로우 실행 로그 확인](${runUrl})**`;
+              const issueBody = [
+                '🍎 ❌ **iOS TestFlight 빌드 실패**',
+                '',
+                `- 앱 버전: \`0.0.0(${buildNumber})\``,
+                '',
+                '❌ 빌드 중 오류가 발생했습니다.',
+                '',
+                `🔗 **[워크플로우 실행 로그 확인](${runUrl})**`
+              ].join('\n');
 
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
