이슈 및 PR 내 테스트 빌드 트리거 및 apk, testflight 자동 테스트 업로드 로직 추가 : feat : 중복되는 워크플로우 삭제 https://github.com/Cassiiopeia/SUH-DEVOPS-TEMPLATE/issues/132

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,8 @@ ios/Flutter/AppFrameworkInfo.plist
 
 # Claude Code local settings
 .claude/settings.local.json
+
+# ====================================================================
+# SUH-DEVOPS-TEMPLATE: Auto-added entries
+# ====================================================================
+/.report
