최신 SUHDEVOPSTEMPLATE 템플릿 업데이트 : feat : 최신 Stable 템플릿 업데이트 https://github.com/TEAM-ROMROM/RomRom-FE/issues/411

--- a/.github/workflows/PROJECT-COMMON-SUH-ISSUE-HELPER-MODULE.yml
+++ b/.github/workflows/PROJECT-COMMON-SUH-ISSUE-HELPER-MODULE.yml
@@ -27,13 +27,10 @@
 # ===================================================
 
 name: PROJECT-COMMON-SUH-ISSUE-HELPER-MODULE
+
 on:
-  # 비활성화: 수동 트리거로 변경
-  workflow_dispatch:
-  # issues:
-  #   types: [opened, reopened]
-#  issues:
-#    types: [opened, edited]
+  issues:
+    types: [opened, edited]
 
 permissions:
   issues: write
