푸쉬_알림_환경설정_및_api_연동 : feat : 안드로이드 적응형 런처 아이콘 추가, 푸쉬알림 아이콘 색상 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
         android:label="롬롬"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@drawable/ic_push_notification" />
+        <meta-data
+        android:name="com.google.firebase.messaging.default_notification_color"
+        android:resource="@color/ic_push_notification_color" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
