init worktree 커스텀 명령어 추가 필요 : feat : .runb gitignore 추가 https://github.com/Cassiiopeia/SUH-DEVOPS-TEMPLATE/issues/172

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ windows/flutter/generated_plugins.cmake
 # SUH-DEVOPS-TEMPLATE: Auto-added entries
 # ====================================================================
 /.report
+/.run/
