fix : 빌드오류 수정 test쪽

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,9 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
 
     target.build_configurations.each do |config|
+      # Xcode 16.4+ requires iOS 12.0 minimum - force all pods to use iOS 15.0
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
         
