--- a/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TEST-TESTFLIGHT.yaml
@@ -91,6 +91,33 @@ jobs:
             echo "// No secrets provided" > ios/Flutter/Secrets.xcconfig
           fi
 
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          cache: true
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-pub-
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
+
+      - name: Install CocoaPods
+        run: |
+          gem install cocoapods
+          cd ios && pod install
+
       # 테스트 빌드 버전 설정 (0.0.0 고정)
       - name: 테스트 빌드 버전 설정
         id: test_version
@@ -429,7 +456,7 @@ jobs:
       # Flutter build (no codesign) - 테스트 버전 0.0.0 사용
       - name: Flutter build (no codesign)
         run: |
-          flutter build ios --release --no-codesign \
+          flutter build ios --release --no-codesign --no-tree-shake-icons \
             --build-name="0.0.0" \
             --build-number="${{ needs.prepare-test-build.outputs.build_number }}"
 
